# tari

./: .gitignore  .license.ignore  Cargo.toml  Cross.toml  README.md  SECURITY.md  changelog-Mainnet.md  changelog-development.md  changelog-nextnet.md  lints.toml  package-lock.json
applications/minotari_app_grpc/: Cargo.toml  build.rs
applications/minotari_app_grpc/proto/: base_node.proto  wallet.proto
applications/minotari_app_grpc/src/authentication/: basic_auth.rs
applications/minotari_app_grpc/src/conversions/: aggregate_body.rs  block.rs  block_header.rs  chain_metadata.rs  com_and_pub_signature.rs  commitment_signature.rs  consensus_constants.rs  mod.rs  new_block_template.rs  output_features.rs  sidechain_feature.rs  signature.rs  transaction.rs  transaction_input.rs  transaction_kernel.rs  transaction_output.rs  unblinded_output.rs
applications/minotari_app_utilities/: Cargo.toml
applications/minotari_app_utilities/src/: parse_miner_input.rs  utilities.rs
applications/minotari_ledger_wallet/comms/: Cargo.toml
applications/minotari_ledger_wallet/comms/src/: accessor_methods.rs  error.rs  ledger_wallet.rs  lib.rs
applications/minotari_ledger_wallet/wallet/: Cargo.toml  README.md
applications/minotari_ledger_wallet/wallet/src/: hashing.rs  main.rs  utils.rs
applications/minotari_merge_mining_proxy/: Cargo.toml  log4rs_sample.yml
applications/minotari_merge_mining_proxy/osx/: start_minotari_merge_mining_proxy
applications/minotari_merge_mining_proxy/src/: block_template_data.rs  block_template_manager.rs  block_template_protocol.rs  config.rs  error.rs  lib.rs  main.rs  monero_fail.rs  proxy.rs  run_merge_miner.rs  test.rs
applications/minotari_merge_mining_proxy/src/common/: proxy.rs
applications/minotari_merge_mining_proxy/src/proxy/: inner.rs  mod.rs  monerod_method.rs  service.rs  static_responses.rs  utils.rs
applications/minotari_node/: Cargo.toml  log4rs_sample.yml
applications/minotari_node/src/: bootstrap.rs  builder.rs  cli.rs  config.rs  grpc_method.rs  lib.rs  main.rs  recovery.rs
applications/minotari_node/src/commands/: cli.rs
applications/minotari_node/src/grpc/: base_node_grpc_server.rs  blocks.rs  data_cache.rs  hash_rate.rs  mod.rs  readiness_grpc_server.rs
applications/minotari_node/src/http/: mod.rs  server.rs
applications/minotari_node/windows/: README.md
applications/minotari_utils/: Cargo.toml  README.md
applications/minotari_utils/src/: cli.rs  config.rs  main.rs
applications/minotari_utils/src/commands/: dbstats.rs  mod.rs
base_layer/common_types/: Cargo.toml
base_layer/common_types/src/: burnt_proof.rs  chain_metadata.rs  emoji.rs  epoch.rs  lib.rs  payment_reference.rs  transaction.rs  wallet_types.rs
base_layer/common_types/src/tari_address/: dual_address.rs  mod.rs  single_address.rs
base_layer/common_types/src/types/: fixed_hash.rs  mod.rs
base_layer/contacts/: Cargo.toml
base_layer/contacts/src/chat_client/: Cargo.toml
base_layer/contacts/src/contacts_service/: error.rs  handle.rs  service.rs
base_layer/contacts/tests/: contacts_service.rs
base_layer/core/: Cargo.toml  diesel.toml
base_layer/core/benches/: mempool.rs
base_layer/core/src/: lib.rs
base_layer/core/src/base_node/: metrics.rs
base_layer/core/src/blocks/: accumulated_data.rs  block.rs  block_header.rs  genesis_block.rs  mod.rs
base_layer/core/src/chain_storage/: active_validator_node.rs  async_db.rs  blockchain_backend.rs  blockchain_database.rs  db_transaction.rs  error.rs  horizon_data.rs  mod.rs  smt_hasher.rs  target_difficulties.rs  template_registation.rs  utxo_mined_info.rs
base_layer/core/src/common/: one_sided.rs
base_layer/core/src/consensus/: chain_strength_comparer.rs  consensus_constants.rs  consensus_manager.rs
base_layer/core/src/covenants/: arguments.rs  covenant.rs  fields.rs  macros.rs  test.rs  token.rs
base_layer/core/src/mempool/: mempool_storage.rs
base_layer/core/src/proof_of_work/: difficulty.rs  error.rs  lwma_diff.rs  mod.rs  proof_of_work_algorithm.rs  sha3x_pow.rs  target_difficulty_window.rs
base_layer/core/src/proto/: block.proto  block.rs  sidechain_feature.proto  sidechain_feature.rs  transaction.rs  types_impls.rs
base_layer/core/src/test_helpers/: blockchain.rs  mod.rs
base_layer/core/src/transactions/: aggregated_body.rs  coinbase_builder.rs  fee.rs  mod.rs  test_helpers.rs  weight.rs
base_layer/core/src/validation/: chain_balance.rs  difficulty_calculator.rs  error.rs  helpers.rs  mocks.rs  test.rs  traits.rs
base_layer/mmr/: Cargo.toml
base_layer/mmr/src/: merkle_proof.rs
base_layer/p2p/: Cargo.toml
base_layer/p2p/src/: config.rs  initialization.rs  lib.rs  peer_seeds.rs  test_utils.rs
base_layer/service_framework/: Cargo.toml
base_layer/sidechain/: Cargo.toml
base_layer/sidechain/src/: command.rs  commit_proof.rs  error.rs  eviction_proof.rs  lib.rs  serde.rs  shard_group.rs  validations.rs
base_layer/sidechain/tests/: commit_proof.rs  eviction_proof.rs
base_layer/wallet_ffi/: Cargo.toml  README.md  wallet.h
base_layer/wallet_ffi/src/: callback_handler.rs  callback_handler_tests.rs  enums.rs  error.rs  ffi_basenode_state.rs  lib.rs  tasks.rs
clients/rust/base_node_wallet_client/: Cargo.toml
common/tari_features/: Cargo.toml
common_sqlite/: Cargo.toml
common_sqlite/src/: connection.rs  error.rs  sqlite_connection_pool.rs
hashing/: Cargo.toml
hashing/src/: borsh_hasher.rs  domains.rs  layer2.rs  lib.rs
infrastructure/derive/: Cargo.toml
infrastructure/jellyfish/: Cargo.toml
infrastructure/jellyfish/src/: bit_iter.rs  error.rs  hash.rs  lib.rs  memory_store.rs  store.rs  tree.rs  types.rs
infrastructure/libtor/: Cargo.toml
infrastructure/libtor/src/: tor.rs
infrastructure/max_size/: Cargo.toml
infrastructure/max_size/src/: bytes.rs  vec.rs
infrastructure/metrics/: Cargo.toml
infrastructure/shutdown/: Cargo.toml
infrastructure/storage/: Cargo.toml
infrastructure/tari_script/: Cargo.toml
infrastructure/tari_script/src/: error.rs  lib.rs  op_codes.rs  script.rs  script_context.rs  stack.rs
(+643 files in other folders)
