[workspace.package]
version = "2.0.0"
edition = "2021"
authors = ["The Tari Development Community"]
repository = "https://github.com/tari-project/tari"
license = "BSD-3-Clause"

[workspace]
members = [
    "base_layer/chat_ffi",
    "base_layer/core",
    "base_layer/common_types",
    "base_layer/contacts",
    "base_layer/key_manager",
    "base_layer/mmr",
    "base_layer/p2p",
    "base_layer/service_framework",
    "base_layer/wallet",
    "base_layer/wallet_ffi",
    "base_layer/tari_mining_helper_ffi",
    "clients/rust/base_node_grpc_client",
    "clients/rust/wallet_grpc_client",
    "comms/core",
    "comms/dht",
    "comms/rpc_macros",
    "common_sqlite",
    "common/tari_features",
    "infrastructure/libtor",
    "infrastructure/metrics",
    "infrastructure/shutdown",
    "infrastructure/storage",
    "infrastructure/tari_script",
    "infrastructure/test_utils",
    "buildtools/deps_only",
    "applications/minotari_node",
    "applications/minotari_console_wallet",
    "applications/minotari_app_utilities",
    "applications/minotari_merge_mining_proxy",
    "applications/minotari_miner",
    "applications/minotari_ledger_wallet/comms",
    "applications/minotari_ledger_wallet/common",
    "integration_tests",
    "hashing",
]
# Add here until we move to edition=2021
resolver = "2"


[workspace.dependencies]
# tari_jellyfish = { path = "infrastructure/jellyfish" }
tari_chat_client = { path = "base_layer/contacts/src/chat_client" }
tari_common = { path = "common" }
tari_common_sqlite = { path = "common_sqlite" }
tari_common_types = { path = "base_layer/common_types" }
tari_comms = { path = "comms/core" }
tari_comms_dht = { path = "comms/dht", default-features = false }
tari_comms_rpc_macros = { path = "comms/rpc_macros" }
tari_contacts = { path = "base_layer/contacts" }
tari_core = { path = "base_layer/core", default-features = false }
tari_crypto = { version = "0.22.0" }
tari_features = { path = "common/tari_features" }
tari_hashing = { path = "hashing" }
tari_key_manager = { path = "base_layer/key_manager" }
tari_libtor = { path = "infrastructure/libtor" }
tari_metrics = { path = "infrastructure/metrics" }
tari_mmr = { path = "base_layer/mmr" }
tari_max_size = { path = "infrastructure/max_size" }
tari_p2p = { path = "base_layer/p2p" }
tari_script = { path = "infrastructure/tari_script" }
tari_service_framework = { path = "base_layer/service_framework" }
tari_shutdown = { path = "infrastructure/shutdown" }
tari_storage = { path = "infrastructure/storage" }
tari_test_utils = { path = "infrastructure/test_utils" }
tari_utilities = { version = "0.8" }
minotari_app_grpc = { path = "applications/minotari_app_grpc" }
minotari_app_utilities = { path = "applications/minotari_app_utilities" }
minotari_wallet = { path = "base_layer/wallet" }
minotari_node_grpc_client = { path = "clients/rust/base_node_grpc_client" }
minotari_chat_ffi = { path = "base_layer/chat_ffi" }
minotari_console_wallet = { path = "applications/minotari_console_wallet" }
minotari_merge_mining_proxy = { path = "applications/minotari_merge_mining_proxy" }
minotari_miner = { path = "applications/minotari_miner" }
minotari_node = { path = "applications/minotari_node" }
minotari_wallet_ffi = { path = "base_layer/wallet_ffi" }
minotari_wallet_grpc_client = { path = "clients/rust/wallet_grpc_client" }
minotari_ledger_wallet_comms = { path = "applications/minotari_ledger_wallet/comms" }
minotari_ledger_wallet_common = { path = "applications/minotari_ledger_wallet/common" }

[profile.release]
# By default, Rust will wrap an integer in release mode instead of throwing the overflow error
# seen in debug mode. Panicking at this time is better than silently using the wrong value.
overflow-checks = true
opt-level = 3
debug = false
# To enable debug symbols with dhat profiling in release mode, enable the 'dhat-heap' feature and use
# CARGO_PROFILE_* Environment Variables:
#   CARGO_PROFILE_RELEASE_DEBUG=true cargo build --release --features=dhat-heap               ...(Linux)
#   $env:CARGO_PROFILE_RELEASE_DEBUG = "true"; cargo build --release --features=dhat-heap     ...(PowerShell)

[patch.crates-io]
liblmdb-sys = { git = "https://github.com/tari-project/lmdb-rs", tag = "0.7.6-tari.1" }
