[package]
name = "tari_common_sqlite"
description = "Tari cryptocurrency wallet library"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
tari_utilities = { workspace = true }

diesel = { version = "2.2.4", features = [
    "sqlite",
    "r2d2",
    "serde_json",
    "chrono",
    "64-column-tables",
] }
diesel_migrations = "2.2"
log = "0.4.6"
rand = "0.8"
serde = "1.0.90"
serde_json = "1.0.133"
thiserror = "1.0.26"
tokio = { version = "1.44", features = ["sync", "macros", "rt"] }
lazy_static = "1.5.0"

[dev-dependencies]
