[package]
name = "tari_hashing"
description = "Tari hash domains"
readme = "README.md"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tari_crypto = { workspace = true, default-features = false, features = [
    "borsh",
] }
borsh = { version = "1.5", default-features = false }
digest = { version = "0.10", default-features = false }

[dev-dependencies]
blake2 = "0.10"
