[package]
name = "minotari_app_grpc"
description = "This crate is to provide a single source for all cross application grpc files and conversions to and from tari::core"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
tari_common_types = { workspace = true }
tari_comms = { workspace = true }
tari_core = { workspace = true }
tari_crypto = { workspace = true }
tari_script = { workspace = true }
tari_max_size = { workspace = true }
tari_utilities = { workspace = true }

argon2 = { version = "0.4.1", features = ["std", "password-hash"] }
base64 = "0.13.0"
borsh = "1.5"
chrono = { version = "0.4.39", default-features = false }
log = "0.4"
prost = "0.13.3"
prost-types = "0.13.3"
rand = "0.8"
rcgen = "0.12.1"
subtle = "2.5.0"
thiserror = "1"
tokio = { version = "1.36", features = ["fs"] }
tonic = { version = "0.12.3", features = ["tls"] }
zeroize = "1"

[build-dependencies]
tari_features = { workspace = true }
tonic-build = "0.12.3"

[package.metadata.cargo-machete]
ignored = [
    "prost",
] # this is so we can run cargo machete without getting false positive about macro dependancies
