[package]
name = "minotari_app_utilities"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
tari_common = { workspace = true }
tari_common_types = { workspace = true }
tari_comms = { workspace = true }
tari_utilities = { workspace = true }
minotari_app_grpc = { workspace = true, optional = true }

clap = { version = "3.2", features = ["derive", "env"] }
futures = { version = "^0.3.16", default-features = false, features = [
    "alloc",
] }
json5 = "0.4"
log = { version = "0.4.8", features = ["std"] }
rand = "0.8"
tokio = { version = "1.44", features = ["signal"] }
serde = "1.0.126"
thiserror = "^1.0.26"
dialoguer = { version = "0.10" }
tonic = "0.13.1"

[build-dependencies]
tari_common = { workspace = true, features = [
    "build",
    "static-application-info",
] }
tari_features = { workspace = true }

[features]
miner_input = ["minotari_app_grpc"]
