[package]
name = "minotari_merge_mining_proxy"
description = "The Tari merge mining proxy for xmrig"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[features]
default = []
# If you are doing heap profiling, use 'dhat-heap' and enable debug symbols:
#   CARGO_PROFILE_RELEASE_DEBUG=true cargo build --release --bin minotari_merge_mining_proxy --features=dhat-heap            ...(Linux)
#   $env:CARGO_PROFILE_RELEASE_DEBUG = "true"; cargo build --release --bin minotari_merge_mining_proxy --features=dhat-heap  ...(PowerShell)
dhat-heap = []

[dependencies]
minotari_app_grpc = { workspace = true }
minotari_app_utilities = { workspace = true, features = ["miner_input"] }
minotari_node_grpc_client = { workspace = true }
minotari_wallet_grpc_client = { workspace = true }
tari_common = { workspace = true }
tari_common_types = { workspace = true }
tari_comms = { workspace = true }
tari_core = { workspace = true, default-features = false, features = [
    "transactions",
] }
tari_max_size = { workspace = true }
tari_utilities = { workspace = true }

tonic = { version = "0.12.3", features = ["tls-webpki-roots"] }
tracing = "0.1"
anyhow = "1.0.53"
bincode = "1.3.1"
borsh = "1.5.7"
bytes = "1.1"
chrono = { version = "0.4.39", default-features = false }
clap = { version = "3.2", features = ["derive", "env"] }
config = { version = "0.14.0" }
crossterm = { version = "0.28" }
dhat = "0.3.3"
futures = { version = "^0.3.16", features = ["async-await"] }
hex = "0.4.2"
hyper = { version = "0.14.12", features = ["default","server"] }
jsonrpc = "0.12.0"
log = { version = "0.4.8", features = ["std"] }
markup5ever = "0.12.1"
monero = { version = "0.21.0", features = ["serde"] }
reqwest = { version = "0.11.4", features = ["json"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.57"
thiserror = "1.0.26"
tokio = { version = "1.44", features = ["macros"] }
url = "2.1.1"
scraper = "0.19.0"
rand = "0.8"
blake2 = "0.10"

[build-dependencies]
tari_features = { workspace = true }

[dev-dependencies]
hyper = { version = "0.14.12", features = ["full"] }
