[package]
name = "minotari_util"
authors = { workspace = true }
description = "Utility tool for Tari base node operations"
repository = { workspace = true }
license = { workspace = true }
version = { workspace = true }
edition = { workspace = true }

[[bin]]
name = "minotari_util"
path = "src/main.rs"

[dependencies]
tari_core = { workspace = true, features = ["base_node"] }

lmdb-zero = "0.4.4"
rusqlite = "0.28"

clap = { version = "4.0", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
tabled = "0.15"
anyhow = "1.0"
env_logger = "0.10"
bytesize = "1.3"

[dev-dependencies]
tempfile = "3.8"
