[package]
name = "tari_common_types"
description = "Tari cryptocurrency common types"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
tari_crypto = { workspace = true }
tari_utilities = { workspace = true }
tari_common = { workspace = true }
# TODO: This is mainly to reference the Branch structure. This should be moved to a crate that does not 
# reference ledger, or at least does not have ledger in the name.
minotari_ledger_wallet_common = { workspace = true }
chacha20poly1305 = "0.10.1"
bitflags = { version = "2.4", features = ["serde"] }
borsh = "1.5.7"
bs58 = "0.5.1"
digest = "0.10"
newtype-ops = "0.1"
once_cell = "1.8.0"
rand = "0.8"
serde = { version = "1.0.106", features = ["derive"] }
strum = "0.22"
strum_macros = "0.22"
thiserror = "1.0.29"
base64 = "0.21.0"
blake2 = "0.10"
primitive-types = { version = "0.12", features = ["serde"] }

[features]
default = []

[package.metadata.cargo-machete]
ignored = [
    "strum",
    "strum_macros",
] # this is so we can run cargo machete without getting false positive about macro dependancies
