[package]
name = "tari_contacts"
description = "Tari contacts library"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
tari_common = { workspace = true }
tari_common_sqlite = { workspace = true }
tari_common_types = { workspace = true }
tari_comms = { workspace = true }
tari_comms_dht = { workspace = true }
tari_crypto = { workspace = true }
tari_max_size = { workspace = true }
tari_p2p = { workspace = true, features = ["auto-update"] }
tari_service_framework = { workspace = true }
tari_shutdown = { workspace = true }
tari_utilities = { workspace = true }

chrono = { version = "0.4.39", default-features = false, features = ["serde"] }
diesel = { version = "2.2.4", features = [
    "sqlite",
    "serde_json",
    "chrono",
    "64-column-tables",
] }
diesel_migrations = "2.2"
futures = { version = "^0.3.1", features = ["compat", "std"] }
log = "0.4.6"
num-derive = "0.4.2"
num-traits = "0.2.15"
prost = "0.13.3"
rand = "0.8"
serde = "1.0.136"
serde_json = "1.0.79"
thiserror = "1.0.26"
tokio = { version = "1.42", features = ["sync", "macros"] }
tower = "0.4"
uuid = { version = "1.3", features = ["v4"] }

[dev-dependencies]
tari_comms_dht = { workspace = true, features = ["test-mocks"] }
tari_test_utils = { workspace = true }
tempfile = "3.1.0"

[build-dependencies]
tari_common = { workspace = true }

[package.metadata.cargo-machete]
ignored = [
    "prost",
] # this is so we can run cargo machete without getting false positive about macro dependancies
