[package]
name = "tari_core"
description = "Core Tari protocol components"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true


[features]
default = ["base_node"]
transactions = []
mempool_proto = []
base_node = [
    "tari_mmr",
    "transactions",
    "mempool_proto",
    "base_node_proto",
    "monero",
    "randomx-rs",
    "hickory-client",
]
base_node_proto = []
benches = ["base_node"]
ledger = ["minotari_ledger_wallet_comms"]
metrics = ["tari_metrics"]

[dependencies]
minotari_ledger_wallet_comms = { workspace = true, optional = true }
tari_common = { workspace = true }
tari_common_types = { workspace = true }
tari_comms = { workspace = true }
tari_comms_dht = { workspace = true }
tari_comms_rpc_macros = { workspace = true }
tari_crypto = { workspace = true, features = ["borsh"] }
tari_max_size = { workspace = true }
tari_metrics = { workspace = true, optional = true }
tari_mmr = { workspace = true, optional = true }
tari_p2p = { workspace = true }
tari_script = { workspace = true }
tari_service_framework = { workspace = true }
tari_shutdown = { workspace = true }
tari_storage = { workspace = true }
tari_test_utils = { workspace = true }
tari_utilities = { workspace = true, features = ["borsh"] }
tari_key_manager = { workspace = true, features = ["key_manager_service"] }
tari_common_sqlite = { workspace = true }
tari_hashing = { workspace = true }

async-trait = { version = "0.1.50" }
bincode = "1.1.4"
bitflags = { version = "2.4", features = ["serde"] }
blake2 = "0.10"
borsh = { version = "1.5", features = ["derive"] }
bytes = "0.5"
chacha20poly1305 = "0.10.1"
chrono = { version = "0.4.39", default-features = false, features = ["serde"] }
decimal-rs = "0.1.42"
diesel = { version = "2.2.4", features = [
    "sqlite",
    "serde_json",
    "chrono",
    "64-column-tables",
] }
diesel_migrations = { version = "2.2" }
derivative = "2.2.0"
digest = "0.10"
fs2 = "0.4.0"
futures = { version = "^0.3.16", features = ["async-await"] }
hex = "0.4.2"
integer-encoding = "3.0"
lmdb-zero = "0.4.4"
log = "0.4"
monero = { version = "0.21.0", features = ["serde-crate"], optional = true }
newtype-ops = "0.1.4"
num-traits = "0.2.15"
num-derive = "0.4.2"
num-format = "0.4.0"
once_cell = "1.8.0"
prost = "0.13.3"
rand = "0.8"
randomx-rs = { version = "1.3", optional = true }
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1.8"
sha3 = "0.10"
sha2 = "0.10"
strum = "0.22"
strum_macros = "0.22"
thiserror = "1.0.26"
tokio = { version = "1.36", features = ["time", "sync", "macros"] }
tracing = "0.1.26"
zeroize = "1"
primitive-types = { version = "0.12", features = ["serde"] }
tiny-keccak = { package = "tari-tiny-keccak", version = "2.0.2", features = [
    "keccak",
] }
dirs-next = "1.0.2"
hickory-client = { version = "=0.25.0-alpha.2", features = [
    "dns-over-rustls",
    "dnssec-openssl",
], optional = true }
hickory-proto = { version = "=0.25.0-alpha.2" }
anyhow = "1.0.53"

[dev-dependencies]
criterion = { version = "0.4.0" }
tari_p2p = { workspace = true, features = ["test-mocks"] }
tari_test_utils = { workspace = true }
# SQLite required for the integration tests
config = { version = "0.14.0" }
env_logger = "0.7.0"
tempfile = "3.1.0"
toml = { version = "0.5" }
quickcheck = "1.0"
serial_test = "0.5"
static_assertions = "1.1.0"

[build-dependencies]
tari_common = { workspace = true, features = ["build"] }
tari_features = { workspace = true }

[[bench]]
name = "mempool"
harness = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(tari_target_network_mainnet)',
    'cfg(tari_target_network_nextnet)',
    'cfg(tari_target_network_testnet)',
] }


[package.metadata.cargo-machete]
ignored = ["hickory-proto"] #fix hickory-proto version to same alpha.2
