[package]
name = "tari_mmr"
description = "A Merkle Mountain Range implementation"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[features]
default = []

[dependencies]
tari_utilities = { workspace = true }
tari_crypto = { workspace = true }
thiserror = "1.0"
borsh = "1.5"
digest = "0.10"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
rand = "0.8"
blake2 = "0.10"
serde_json = "1.0"
bincode = "1.1"
criterion = { version = "0.5" }

[lib]
# Disable libtest from intercepting Criterion bench arguments
bench = false

[[bench]]
name = "mmr"
harness = false

[[bench]]
name = "smt"
harness = false


[[test]]
name = "tari_mmr_integration_tests"
path = "tests/mmr_integration_tests.rs"
