[package]
name = "tari_p2p"
description = "Tari base layer-specific peer-to-peer communication features"
readme = "README.md"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
tari_comms = { workspace = true }
tari_comms_dht = { workspace = true }
tari_common = { workspace = true }
tari_service_framework = { workspace = true }
tari_shutdown = { workspace = true }
tari_storage = { workspace = true }
tari_utilities = { workspace = true }

anyhow = "1.0.53"
fs2 = "0.4.0"
futures = { version = "^0.3.1" }
lmdb-zero = "0.4.4"
log = "0.4.6"
pgp = { version = "0.14.2", optional = true }
prost = "0.13.3"
rand = "0.8"
reqwest = { version = "0.11", optional = true, default-features = false }
rustls = { version = "0.23.13", default-features = false, features = [
    "logging",
    "std",
    "tls12",
] }
semver = { version = "1.0.1", optional = true }
serde = "1.0.90"
thiserror = "1.0.26"
tokio = { version = "1.36", features = ["macros"] }
tokio-stream = { version = "0.1.9", default-features = false, features = [
    "time",
] }
tower = "0.4.11"
hickory-client = { version = "=0.25.0-alpha.2", features = ["dns-over-rustls"] }
hickory-resolver = "0.25.0-alpha.2"
hickory-proto = { version = "=0.25.0-alpha.2" }
webpki-roots = "0.26.6"

[dev-dependencies]
tari_test_utils = { workspace = true }
toml = "0.5.11"

config = "0.14.0"
clap = "3.2"
tempfile = "3.1.0"

[build-dependencies]
tari_common = { workspace = true, features = ["build"] }

[features]
test-mocks = []
auto-update = ["reqwest/default", "pgp", "semver"]

[package.metadata.cargo-machete]
ignored = ["hickory-proto"] #fix hickory-proto version to same alpha.2
