[package]
name = "tari_service_framework"
description = "The Tari communication stack service framework"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tari_shutdown = { workspace = true }

anyhow = "1.0.53"
async-trait = "0.1.50"
futures = { version = "^0.3.16", features = ["async-await"] }
log = "0.4.8"
thiserror = "1.0.26"
tokio = { version = "1.44", features = ["rt", "sync"] }
tower-service = { version = "0.3" }

[dev-dependencies]
tari_test_utils = { workspace = true }

tokio = { version = "1.44", features = ["rt-multi-thread", "macros", "time"] }
futures-test = { version = "0.3.3" }
tower = "0.4"
