[package]
name = "tari_sidechain"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
tari_hashing = { workspace = true }
tari_crypto = { workspace = true, features = ["borsh"] }
tari_utilities = { workspace = true }
tari_common_types = { workspace = true }
tari_jellyfish = { workspace = true }

log = "0.4.22"
thiserror = "2.0"
borsh = "1.5"
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0.108"