[package]
name = "minotari_wallet_ffi"
description = "Tari cryptocurrency wallet C FFI bindings"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
tari_core = { workspace = true, default-features = false, features = [
    "tari_mmr",
    "transactions",
] }
tari_common = { workspace = true }
tari_common_sqlite = { workspace = true }
tari_common_types = { workspace = true }
tari_comms = { workspace = true, features = ["c_integration"] }
tari_comms_dht = { workspace = true, default-features = false }
tari_crypto = { workspace = true }
tari_key_manager = { workspace = true }
tari_p2p = { workspace = true }
tari_script = { workspace = true }
tari_shutdown = { workspace = true }
tari_utilities = { workspace = true }
minotari_wallet = { workspace = true, features = ["c_integration"] }
tari_contacts = { workspace = true }

chacha20poly1305 = "0.10.1"
chrono = { version = "0.4.39", default-features = false, features = ["serde"] }
futures = { version = "^0.3.1", features = ["compat", "std"] }
libc = "0.2.65"
log = "0.4.6"
log4rs = { version = "1.3.0", features = [
    "console_appender",
    "file_appender",
    "yaml_format",
] }
rand = "0.8"
thiserror = "1.0.26"
tokio = "1.44"
num-traits = "0.2.15"
itertools = "0.10.3"
zeroize = "1"
serde_json = "1.0"
url = { version = "2.5.4", features = ["default", "serde"] }

[target.'cfg(target_os="android")'.dependencies]
openssl = { version = "0.10.72", features = ["vendored"] }

[lib]
crate-type = ["staticlib", "cdylib"]

[dev-dependencies]
once_cell = "1.8.0"
tempfile = "3.1.0"
tari_key_manager = { workspace = true }
tari_common_types = { workspace = true }
tari_test_utils = { workspace = true }
tari_service_framework = { workspace = true }
tari_core = { workspace = true, default-features = false, features = [
    "base_node",
] }
borsh = "1.5.7"
env_logger = "0.7.1"

[build-dependencies]
cbindgen = "0.24.5"
tari_common = { workspace = true, features = [
    "build",
    "static-application-info",
] }
tari_features = { workspace = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(tari_target_network_mainnet)',
    'cfg(tari_target_network_nextnet)',
    'cfg(tari_target_network_testnet)',
] }
