[package]
name = "tari_features"
description = "Compilable features for Tari applications"
readme = "README.md"

version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# So you're thinking about adding a dependency here?
# This crate is utilized in the compilation of _most_ of our other crates. You're probably about
# to create a cyclic dependency. Please think hard whether this change is actually required.
