[package]
name = "tari_jellyfish"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
tari_hashing = { workspace = true }
tari_crypto = { workspace = true }

serde = { version = "1.0", features = ["derive"] }
borsh = "1.5"
digest = "0.10"
thiserror = "2.0"
indexmap = { version = "2.6", features = ["serde"] }