[package]
name = "tari_libtor"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
tari_common = { workspace = true }
tari_p2p = { workspace = true }

derivative = "2.2.0"
log = "0.4.8"
rand = "0.8"
tor-hash-passwd = "1.0.1"

[target.'cfg(unix)'.dependencies]
libtor = { version = "47.13.0", features = ["vendored-openssl"] }

[package.metadata.cargo-machete]
ignored = [
    "openssl",
] # this is so we can run cargo machete without getting false positive about macro dependancies
