[package]
name = "tari_max_size"
description = "Tari max size library"
categories = ["cryptography"]
readme = "README.md"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
tari_utilities = { workspace = true }

borsh = "1.5"
serde = { version = "1.0.136", features = ["derive"] }
thiserror = "1.0.30"
