[package]
name = "tari_metrics"
description = "Tari metrics"
readme = "README.md"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
log = { version = "0.4.14", optional = true }
once_cell = "1.8.0"
prometheus = "0.14.0"

futures = { version = "0.3.15", default-features = false, optional = true }
reqwest = { version = "0.11.4", default-features = false, optional = true }
tokio = { version = "1", optional = true, features = [
    "time",
    "rt-multi-thread",
] }
warp = { version = "0.3.1", optional = true, default-features = false }
thiserror = "1.0.25"
anyhow = { version = "1.0.53", optional = true }

[features]
pull = ["warp"]
push = ["reqwest", "tokio"]
server = ["pull", "push", "log", "anyhow", "futures"]
