[package]
name = "tari_shutdown"
description = "A convenient shutdown signal"
readme = "README.md"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
futures = "^0.3"

[dev-dependencies]
tokio = { version = "1", default-features = false, features = ["rt", "macros"] }
