[package]
name = "tari_storage"
description = "Key-Value store API for the Tari project"
readme = "README.md"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
bincode = "1.1"
log = "0.4.0"
lmdb-zero = "0.4.4"
thiserror = "1.0.26"
serde = { version = "1.0.80", features = ["derive"] }

[dev-dependencies]
rand = "0.8"
tari_utilities = { workspace = true, features = ["borsh"] }
