[package]
name = "tari_script"
description = "Tari script library"
categories = ["cryptography"]
readme = "README.md"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
tari_crypto = { workspace = true }
tari_max_size = { workspace = true }
tari_utilities = { workspace = true }

blake2 = "0.10"
borsh = "1.5.7"
digest = "0.10"
integer-encoding = "3.0.2"
serde = "1.0.136"
sha2 = "0.10"
sha3 = "0.10"
thiserror = "1.0.30"

[dev-dependencies]
rand = "0.8"
