[package]
name = "minotari_ledger_wallet_comms"
version = "2.1.0-pre.1"
authors = ["The Tari Development Community"]
license = "BSD-3-Clause"
edition = "2021"

[dependencies]
tari_utilities = { version = "0.8" }
tari_common = { path = "../../../common" }
tari_common_types = { path = "../../../base_layer/common_types" }
tari_script = { path = "../../../infrastructure/tari_script" }
tari_crypto = { version = "0.22.0" }

minotari_ledger_wallet_common = { path = "../common" }
semver = "1.0"
borsh = "1.5.7"
dialoguer = { version = "0.11" }
ledger-transport = { git = "https://github.com/Zondax/ledger-rs", rev = "4ed4cfdef0ae8b40e8997d849a3262bcf00c7d3c" }
ledger-transport-hid = { git = "https://github.com/Zondax/ledger-rs", rev = "4ed4cfdef0ae8b40e8997d849a3262bcf00c7d3c" }
log = "0.4.20"
rand = "0.8"
serde = { version = "1.0.106", features = ["derive"] }
thiserror = "1.0.26"
