[package]
name = "minotari_ledger_wallet"
version = "1.12.0-pre.0"
authors = ["The Tari Development Community"]
license = "BSD-3-Clause"
edition = "2021"

[dependencies]

minotari_ledger_wallet_common = { path = "../common" }
tari_utilities = { version = "0.8", default-features = false }

blake2 = { version = "0.10", default-features = false }
borsh = { version = "1.5", default-features = false }
digest = { version = "0.10", default-features = false }
include_gif = "1.2"
ledger_device_sdk = "1.21"
rand_core = { version = "0.6", default_features = false }
zeroize = { version = "1", default-features = false }
curve25519-dalek = { version = "4", default-features = false, features = [ "alloc", "rand_core", "precomputed-tables", "zeroize"] }
subtle = { version = "2.5.0", default-features = false }

[package.metadata.cargo-machete]
ignored = []

[profile.release]
opt-level = 'z'
lto = true
panic = "abort"

[features]
default = []
pending_review_screen = []

[package.metadata.ledger]
curve = ["secp256k1"]
flags = "0"
path = ["44'/535348'"]
name = "MinoTari Wallet"


[package.metadata.ledger.nanox]
icon = "key_14x14.gif"

[package.metadata.ledger.nanosplus]
icon = "key_14x14.gif"

[package.metadata.ledger.stax]
icon = "key_32x32.gif"

[package.metadata.ledger.flex]
icon = "key_40x40.gif"

[workspace]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("stax", "flex", "nanos", "nanox", "nanosplus"))'] }