[package]
name = "minotari_node_wallet_client"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
tari_core = { workspace = true, default-features = false, features = [
    "transactions",
] }
url = { version = "2.5.4", features = ["default", "serde"] }
reqwest = { version = "0.12.15", features = ["default", "json"] }
thiserror = "^1.0.26"
async-trait = "0.1.88"
